<resources>
    <string name="app_name">Capstone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="invalid_password_email">Email or password is invalid</string>
    <string name="login">Login</string>
    <string name="loading">Loading..</string>
    <string name="try_again">Try again!</string>
    <string name="next">Next</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="login_required">Login Required</string>
    <string name="please_login_to_continue">Please login to continue.</string>
    <string name="cancel">Cancel</string>
    <string name="leaderboard_not_found">Leaderboard not found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="informasi_badge">Informasi Badge</string>
    <string name="seed_tier">Seed Tier</string>
    <string name="text_seed_tier">Langkah awal untuk menciptakan perubahan. Badge seed sebagai simbol awal petumbuhan. Raih 100 point untuk memperoleh Sprout tier badge.</string>
    <string name="sprout_tier">Sprout Tier</string>
    <string name="text_sprout_tier">Tier ini menjadi tanda bahwa kamu sudah mulai bertumbuh menjadi lebih peduli lingkungan. Benih kepedulian lingkungan yang kamu miliki sudah menjadi tunas. Bersemangat untuk mendapatkan 500 poin demi Sapling Tier Badge.</string>
    <string name="sapling_tier">Sapling Tier</string>
    <string name="text_sapling_tier">Tunas sudah menjadi pohon dan terus bertumbuh menjadi pelopor peduli lingkungan sejati. Tier ini menjadi bukti bahwa kamu semakin aktif dan bertumbuh dalam aksi positif. Raih 1000 poin untuk memperoleh Tree Tier Badge.</string>
    <string name="tree_tier">Tree Tier</string>
    <string name="text_tree_tier">Kepedulian kamu terhadap lingkungan sekokoh pohon, berkontribusi besar untuk lingkungan. Raih 5000 poin untuk menjadi pelindung lingkungan sejati.</string>
    <string name="fg_tier">Forest Guardian Tier</string>
    <string name="text_fg_tier">Tier tertinggi dalam tahta pelindung lingkungan sejati. Sampai pada tier ini adalah bukti bahwa kamu telah memberikan dampak yang besar terhadap kebersihan lingkungan. Mendapatkan Badge Forest Guardian adalah sebuah kehormatan. Ajak teman dan keluarga untuk peduli terhadap lingkungan.</string>
</resources>